# vvz-ollama-workplace

./: .gitignore  AGENTS.md  README.md  projectid  pyproject.toml  setup.cfg
.cursor/rules/: aispeechrules.mdc  project-standards.mdc  structure.mdc
code_analysis/: code_issues.yaml  code_map.yaml  method_index.yaml
config/: adapter_config.json  adapter_config.local.json.example  database_client.check.json  database_client.health.check.json  database_client.live.json  database_client.localhost.check.json  database_server_config.generated.json  model_rules.txt  model_standards.txt  model_workspace_client.check.json  model_workspace_client.live.json  model_workspace_client.localhost.check.json  mwps.example.yaml  ollama_workstation.example.yaml  rules.example.md  secrets.env.example  standards.example.md  tools.example.json
container/: Dockerfile  entrypoint.sh  generate_certs.sh  generate_config.py  run_adapter.py
docker/: Dockerfile  build_and_run.sh  ensure_mwps_models.py  ensure_ollama_models.py  entrypoint.sh  generate_certs.sh  generate_config.py  redis.conf  run.conf  run_adapter.py  run_test_container.sh  test_server.sh
docker/config-db/: adapter_config.json
docker/config-mwps/: adapter_config.json
docker/config-mws/: adapter_config.json
docker/config-ollama/: adapter_config.json
docs/: PROJECT_RULES.md  README.md  RULES.md  SUBPROJECTS_OVERVIEW.md  container_usage.md  context_formation.md  design.md  mwps_setup.md  ollama_setup.md  project_structure.md  registration_troubleshooting.md  standards.md  techspec.md
docs/agent-ref/: README.md
docs/plans/: DEVELOPMENT_PLAN.md  DYNAMIC_COMMANDS_AND_MEMORY_PLAN.md  README.md
docs/reports/: config_settings_graph.md  context_representation_layer_analysis.md  redis_database_high_level_api_analysis.md  unimplemented_and_stubs.md
docs/requests/: planmgr_context_block_commands_request.md  planmgr_file_exchange_interface_request.md  planmgr_hrs_import_verification_bug.md  planmgr_prompt_chain_command_request.md  planmgr_prompt_chain_parent_lookup_bug.md  planmgr_step_runtime_parameters_request.md  planmgr_step_status_transition_request.md  planmgr_working_state_dump_request.md
docs/standards/: README.md  atomic_step_creation_standard.yaml  codex_editing_standard.yaml  codex_search_standard.yaml  codex_terminal_standard.yaml  hrs_mrs_gs_consistency_verification_standard.yaml  plan_standard_machine.yaml  provider_client_config_standard.md  provider_client_standard.md  tactical_step_creation_standard.yaml
examples/: mwps_chat_example.py  ollama_chat_example.py
model_workspace/: README.md  projectid  pyproject.toml
model_workspace/docker/: Dockerfile  README.md  build_image.sh  run.conf  run_container.sh
model_workspace/docs/: README.md  container_usage.md  context_formation.md  deployment.md  design.md  techspec.md  ТЗ.md
model_workspace/docs/standards/: provider_client_config_standard.md  provider_client_standard.md
model_workspace/src/model_workspace/: __init__.py
model_workspace/tests/: __init__.py
model_workspace/tests/integration/: __init__.py
model_workspace/tests/unit/: __init__.py
mwps_adapter/: .gitignore  README.md  pyproject.toml
mwps_provider_client/: README.md  pyproject.toml
old_code/: docs_plans_refactoring_comprehensive_analysis_INDEX.md-cb54bb34-adcd-4f0c-aab3-925b6396ab6f  index.txt
ollama_adapter/: README.md  pyproject.toml
ollama_provider_client/: README.md  projectid  pyproject.toml
redis_adapter/: .gitignore  README.md  pyproject.toml
redis_provider_client/: .gitignore  README.md  projectid  pyproject.toml
scripts/: build_run_and_test_server.sh  check_provider_endpoints.py  check_tools_access.py  generate_full_config.py  generate_local_config.sh  list_provider_models.py  publish_client_packages.sh  start_infra_containers.sh  start_ollama_container.sh  start_ollama_cpu.sh  start_redis_container.sh  verify_context_formation.py  verify_context_limits.py  verify_model_session_chat.py  verify_models_availability.py  verify_mwps.py  verify_ollama.py  verify_real_ws_e2e.py  verify_redis_pipeline.py  verify_vectorizer_context_and_tools.py
src/database_client/: README.md  __init__.py  config_cli.py  config_generator.py  pyproject.toml
src/model_workspace_client/: README.md  __init__.py  config_cli.py  config_generator.py  config_validator.py  pyproject.toml
tests/: __init__.py
(+337 files in other folders)
