[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-workstation"
version = "0.1.0"
description = "OLLAMA workstation: chat with OLLAMA using MCP Proxy tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "embed-client>=3.1.7.24",
    "httpx",
    "mcp-proxy-adapter",
    "PyYAML",
    "redis",
    "svo-client>=2.2.15",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
config-cli = "ollama_workstation.config_cli:main"
database-client-config-cli = "database_client.config_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.client-packaging]
root_publishable = false
model_workspace_client_project = "src/model_workspace_client/pyproject.toml"
database_client_project = "src/database_client/pyproject.toml"

[tool.black]
line-length = 88
# Align with flake8 (max-line-length = 88). Run: black src tests
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
# Align with black (line-length = 88). Run: flake8 src tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: run against real proxy/servers (deselect with -m 'not integration')"]
