[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-workspace"
version = "0.1.0"
description = "Model workspace: chat and tools via redis-adapter and ollama-adapter clients"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp-proxy-adapter",
    "redis-adapter",
    "ollama-adapter",
    "httpx",
    "PyYAML",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "flake8",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
