[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-workspace-client"
version = "0.1.0"
description = "Model workspace client package for Ollama workstation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp-proxy-adapter",
]

[project.scripts]
model-workspace-client-config-cli = "model_workspace_client.config_cli:main"

[tool.setuptools]
packages = ["model_workspace_client"]
package-dir = { "model_workspace_client" = "." }
